--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,8 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  color: rgba(255, 255, 255, 0.87);
+  text-decoration: none;
 }
 
 body {
@@ -28,6 +24,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url("./assets/background.webp");
+  background-attachment: fixed;
+  background-size: contain;
 }
 
 h1 {
